--- a/index.Rmd
+++ b/index.Rmd
@@ -8,16 +8,19 @@ output: pdf_document
 ```{r, include=FALSE}
 rm(list=ls())
 library(tidyverse)
-library(randomizr)
+library(random)
 library(data.table)
 ```
 
-The first thing is to create enough test data in order to be able to fully reassign control & treatment groups. We'll start with 16 numbered observations, randomize the assignment of treatment, and randomize the outcome variable we intend to test. This will be our base for using randomized treatment assignments and identifying how to accurate perform the permutation inference test primarily.
+The first thing is to create enough test data in order to be able to fully reassign control & treatment groups. We'll start with 16 numbered observations, randomize the assignment of treatment, and randomize the outcome variable we intend to test. This will be our base for using randomized treatment assignments and identifying how to accurately perform the permutation inference test primarily.
 
 ```{r Test Data}
-test <- tibble("obs"=1:16,
-               "treatment"=ifelse(randomNumbers(16,0,100,1)>50,1,0),
-               "outcome"=randomNumbers(16,0,20,1))
+
+x <- 16
+
+test <- tibble("obs"=1:x,
+               "treatment"=ifelse(randomNumbers(x,0,100,1)>50,1,0),
+               "outcome"=randomNumbers(x,0,50,1))
 
 treated <- sum(test$treatment)
 
@@ -29,7 +32,7 @@ We have so far a truly random assignment of treatment and, for the purposes of t
 
 ```{r Sample Mean}
 test %>% group_by(treatment) %>% tally()
-test %>% group_by(treatment) %>% summarise(mean=mean(outcome))
+test %>% group_by(treatment) %>% summarize(mean=mean(outcome))
 ```
 
 Let's presume some limitation, that does not allow us to retest this experiment. We can determine whether the outcome was statistically significant by reassigning treatment and control through each permutation, developing a series of means, and then testing our true mean against the artificial means in a distribution and identifying where it landed. 
@@ -45,12 +48,12 @@ comb <- function(n,r) {
   return(num/(den1*den2))
 }
 
-comb(16,treated)
+comb(x,treated)
 ```
 
 
 ```{r Treatment Reassignment}
-perm <- do.call(CJ, replicate(16,0:1, FALSE))
+perm <- do.call(CJ, replicate(x,0:1, FALSE))
 perm <- perm %>% mutate(check=rowSums(perm)) %>% filter(., check == treated)
 perm$check <- NULL
 perm <- as_tibble(transpose(perm))
@@ -91,5 +94,7 @@ perm_distro$diff <- perm_distro$V2-perm_distro$V1
 
 actualtreatment <- unlist(perm_distro %>% filter(name=="treatment") %>% select(diff))
 
-perm_distro %>% filter(name!="treatment") %>% ggplot(.,aes(diff)) + geom_histogram() + geom_vline(xintercept=mean(perm_distro$diff)) + geom_vline(xintercept = 2*sd(perm_distro$diff)) + geom_vline(xintercept = actualtreatment, linetype="dashed")
+perm_distro %>% filter(name!="treatment") %>% ggplot(.,aes(diff)) + geom_histogram() +
+  geom_vline(xintercept=mean(perm_distro$diff)) + geom_vline(xintercept = -2*sd(perm_distro$diff)) + 
+  geom_vline(xintercept = 2*sd(perm_distro$diff)) + geom_vline(xintercept = actualtreatment, linetype="dashed", color="red")
 ```
