--- a/index.Rmd
+++ b/index.Rmd
@@ -15,7 +15,6 @@ library(data.table)
 The first thing is to create enough test data in order to be able to fully reassign control & treatment groups. We'll start with 16 numbered observations, randomize the assignment of treatment, and randomize the outcome variable we intend to test. This will be our base for using randomized treatment assignments and identifying how to accurately perform the permutation inference test primarily.
 
 ```{r Test Data}
-
 x <- 16
 
 test <- tibble("obs"=1:x,
@@ -94,7 +93,7 @@ perm_distro$diff <- perm_distro$V2-perm_distro$V1
 
 actualtreatment <- unlist(perm_distro %>% filter(name=="treatment") %>% select(diff))
 
-perm_distro %>% filter(name!="treatment") %>% ggplot(.,aes(diff)) + geom_histogram() +
+perm_distro %>% filter(name!="treatment") %>% ggplot(.,aes(diff)) + geom_histogram(bins=30) +
   geom_vline(xintercept=mean(perm_distro$diff)) + geom_vline(xintercept = -2*sd(perm_distro$diff)) + 
   geom_vline(xintercept = 2*sd(perm_distro$diff)) + geom_vline(xintercept = actualtreatment, linetype="dashed", color="red")
 ```
